Add answer route
